17edc13 (HEAD, 7.x-1.x) Added hook_libraries_info().
755ac3e (origin/HEAD, origin/7.x-1.x) Removing some commented code from ace_editor.drush.inc.
87f37e7 Added Drush command 'dl-ace' for easily download and install the Ace library (some fixes).
e381ca0 Added Drush command 'dl-ace' for easily download and install the Ace library.
7ef4102 README.txt: fixing typos.
c4316ed Do not create but just enable the 'Ace Editor' filter format if the format has been previously disabled.
b26df89 README.txt updated with instructions for removing Ace Editor filter format after unsintalling the module.
2fe66d4 Revert "Disable Ace Editor filter format if module is uninstalled." Content saved with 'Ace Editor' filter format will not be shown. This reverts commit 7cdc3cb8019f1ff8b74e8edc32913b031b61a02f.
7cdc3cb Disable Ace Editor filter format if module is uninstalled.
481049a Added hook_requirements() to provide a library status message on the Status Report.
b47c8fb Issue #2330383 by torotil: Multi-site libraries path.
9f50437 Issue #2468489 by torotil: Use drupal_html_id instead of custom code.
fc0d2cb Issue #2431371 by interdruper: Option inside the editor to dinamically enable or disable auto-completion.
b1cd37b Issue #1420290 by interdruper: Added autowrap and line highlighting options to admin panel.
d44843f Issue #2270799 by Alex Bukach: Not working when library is not in sites/all/libraries. Added dependency from Libraries API module.
7dac151 Added CHANGELOG.txt file.
22398f8 Issue #2287147 by tonylegrone: Add new custom permission for the config page of the module
b0fb30d (tag: 7.x-1.1) #2230725 by Growiel,tempo22: Update the README to specify that we need to use a version of Ace > 1.0.0 and update the download links to reflect that
b41f13d Issue #2227443 by Growiel: Editor is now able to calculate its own height
a9c2e91 (tag: 7.x-1.0) Small tweaks to the README and fix a comment in ace_editor_install. We're ready for a stable release.