@@ -1,15 +1,13 @@
 
 pre.ace_editor {
-	position: relative;
-	border: 1px solid #CCC;
-	background-color: white;
+  position: relative;
+  border: 1px solid #CCC;
 }
 
 pre.ace-tm {
-	
 }
 
 div.ace_gutter-cell.ace_error,
 div.ace_gutter-cell.ace_warning {
-	background: none;
+  background: none;
 }
