@@ -1,5 +1,6 @@
-17edc13 (HEAD, 7.x-1.x) Added hook_libraries_info().
-755ac3e (origin/HEAD, origin/7.x-1.x) Removing some commented code from ace_editor.drush.inc.
+b7c9d8d (HEAD, 7.x-1.x) Using libraries_detect() for checking if Ace Library is properly installed.
+64417be (origin/HEAD, origin/7.x-1.x) Added hook_libraries_info().
+755ac3e Removing some commented code from ace_editor.drush.inc.
 87f37e7 Added Drush command 'dl-ace' for easily download and install the Ace library (some fixes).
 e381ca0 Added Drush command 'dl-ace' for easily download and install the Ace library.
 7ef4102 README.txt: fixing typos.
